feat: added run to create fake data
